test/conformance/chainsaw/image-validating-policies/autogen/autogen-deployments-statefulsets/check-autogen.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ImageValidatingPolicy
metadata:
    name: ivpol-autogen-sample
status:
  autogen:
    configs:
      defaults:
        spec:
          autogen:
            podControllers:
              controllers:
              - deployments
              - statefulsets
          matchConditions:
          - expression: >-
              has(object.spec.template.metadata.labels)
              && has(object.spec.template.metadata.labels.prod)
              && object.spec.template.metadata.labels.prod == 'true'
            name: check-prod-label
          matchConstraints:
            resourceRules:
            - apiGroups:
              - apps
              apiVersions:
              - v1
              operations:
              - CREATE
              resources:
              - deployments
              - statefulsets
          validationActions:
          - Audit
          validations:
          - expression: images.containers.map(image, image.image.endsWith(':signed')).all(e, e)
            message: image must be tagged as signed
          validationConfigurations:
            mutateDigest: true
            required: true
            verifyDigest: true
          webhookConfiguration:
            timeoutSeconds: 60
