test/conformance/chainsaw/image-validating-policies/autogen/autogen-deployments-statefulsets/policy.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ImageValidatingPolicy
metadata:
  name: ivpol-autogen-sample
spec:
  autogen:
    podControllers:
      controllers:
      - deployments
      - statefulsets
  webhookConfiguration:
    timeoutSeconds: 60
  failurePolicy: Ignore
  validationActions:
  - Audit
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
  matchConditions:
    - name: "check-prod-label"  
      expression: >- 
        has(object.metadata.labels) && has(object.metadata.labels.prod) && object.metadata.labels.prod == 'true'
  matchImageReferences:
    - glob: ghcr.io/*
  validations:
    - expression: >-
        images.containers.map(image, image.image.endsWith(':signed')).all(e, e)
      message: image must be tagged as signed
