test/conformance/chainsaw/image-validating-policies/autogen/autogen-deployments-statefulsets/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: autogen-deployments-statefulsets
spec:
  timeouts:
    apply: 30s
    assert: 30s
    error: 30s
  steps:
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-image-validating-policy-ready
    use:
      template: ../../../_step-templates/image-validating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: ivpol-autogen-sample
  - name: check autogen policy
    try:
    - assert:
        file: check-autogen.yaml
  - name: create good statefulset
    timeouts:
      apply: 90s
    try:
    - create:
        file: good-statefulset.yaml
  - name: create bad statefulset
    timeouts:
      apply: 90s
    try:
    - create:
        file: bad-statefulset.yaml
